--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,12 @@
+Satisfying dependencies
+-----------------------
+
+These scripts require Python 3 and the Python 3 Requests library.
+
+You can download Python at: http://www.python.org
+
+You can download Python Requests at: http://python-requests.org
+
 Installing the scripts
 ----------------------
 
