--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 Satisfying dependencies
 -----------------------
 
-These scripts require Python 3 and the Python 3 Requests library.
+This script requires Python 3 and the Python 3 Requests library.
 
 You can download Python at: http://www.python.org
 
@@ -10,9 +10,7 @@ You can download Python Requests at: http://python-requests.org
 Installing the scripts
 ----------------------
 
-Installing dogefetch or coinfetch can be done automatically with make.
+Installing dogefetch can be done automatically with make.
 
-# make EXEC=(x)
+# make install
 
-(x) should be either "dogefetch" or "coinfetch" (without quotes) to select which
-script to install.
